# customFileExplorer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend_properties/cache/: search_cache.json
backend_properties/file_category/: file_category.json
backend_properties/search_properties/: fuzzy_properties.json
logs/: test_log.json
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: commands.rs  custom_category.rs  explorer_functions.rs  front_utils.rs  main.rs  sch_adv_properties_slot.rs  search.rs
src/lib/: api.ts  language.ts  store.ts
src/lib/components/: Folder.svelte  currentPath.svelte  discInfo.svelte  navi.svelte  test.svelte  titleBar.svelte
src/lib/i18n/: translations.ts
src/lib/style/: folder_svelte.css  global_features.css  mainPage.css  navbar.css  splashScreen.css
src/lib/style/themes/: default_theme.css  linux_style_theme.css  retro_theme.css  sf_style_theme.css
src/properties/: sch_obj_set.json  util_buttons.json
src/routes/: +page.svelte  test-tauri.svelte
src/routes/backendTest/: +page.svelte
src/routes/frontTest/: +page.svelte
src/routes/frontTest/dragTest/: +page.svelte
src/routes/frontTest/frame/: +page.svelte
src/routes/frontTest/frame/dirTempTest/: +page.svelte
src/routes/frontTest/frame/mainPage/: +page.svelte
src/routes/frontTest/frame/splashScreen/: +page.svelte
src/routes/frontTest/style/: mainPage.css  splashScreen.css
src/routes/tabTest/: +page.svelte
