[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
trash = "2.0"
sysinfo = { version = "0.31.4", features = ["disk"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "dialog-all", "window-all"] }

tokio = { version = "1.39.3", features = ["full"] }
rayon = "1.10.0"
chrono = "0.4"
mime_guess = "2.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_System"
, "Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Security_Authorization", "Win32_System_Threading", "Win32_System_SystemServices"] }
once_cell = "1.20.2"
num_cpus = "1.13"
uuid = { version = "1.10.0", features = ["serde"] }
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "winbase", "winnt", "securitybaseapi", "processthreadsapi", "sddl", "aclapi"] }
wmi = "0.14.0"





[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
